force-app/main/default/objects/Customer_Tax_Number_Category__c/Customer_Tax_Number_Category__c.object-meta.xml
<CustomObject>
    <label>Customer Tax Number Category</label>
    <nameField>
        <displayFormat>CTNC-{000000}</displayFormat>
        <label>Customer Tax Number Category Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>