force-app/main/default/objects/Customer_Tax_Number_Category__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Tax Number Category</relationshipLabel>
    <relationshipName>Customer_Tax_Number_Category</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>