force-app/main/default/objects/Customer_Tax_Number_Category__c/fields/Long_Tax_Number__c.field-meta.xml
<CustomField>
    <fullName>Long_Tax_Number__c</fullName>
    <label>Long Tax Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>