force-app/main/default/objects/Customer_Tax_Number_Category__c/fields/Tax_Number_Master_Data__c.field-meta.xml
<CustomField>
    <fullName>Tax_Number_Master_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Number Master Data</label>
    <referenceTo>Tax_Number_Master_Data__c</referenceTo>
    <relationshipLabel>Customer Tax Number Category</relationshipLabel>
    <relationshipName>Customer_Tax_Number_Category</relationshipName>
    <type>Lookup</type>
</CustomField>